opam-version: "2.0"
name: "bonsai-disclosure-component"
synopsis: "Bonsai component for building UIs that show and hide content"
maintainer: "Bogdan Tataroiu <b.tataroiu@gmail.com>"
authors: [ "Bogdan Tataroiu <b.tataroiu@gmail.com>" ]
depends: [
  "bonsai"
  "bonsai-toggleable"
  "core"
  "virtual_dom"
  "dune" {build}
  "ppx_jane" {build}
  "ocaml" {build}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
